error_templates/java/test_files/non_static_method_access_error/test.txt
template: "Java.NonStaticMethodAccessError"
---
Main.java:9: error: non-static method printMessage() cannot be referenced from a static context
        printMessage(); // This will result in an error
        ^
1 error
===
template: "Java.NonStaticMethodAccessError"
---
# NonStaticMethodAccessError
In the `Main` class, you have invoked the `printMessage` method inside the `main` static method. 
                
```
        // Attempt to call the non-static method without creating an object
        printMessage(); // This will result in an error
        ^^^^^^^^^^^^
    }
}

```
## Steps to fix
1. Fix 1